# AIIDAMS_S5_research_emerging_topics

./: .gitignore  README.md  main.py  pyproject.toml
lab1/: AM_Lab_1.ipynb
lab2/: AM_Lab_2_vf.ipynb  best_steel_production_model.joblib  model_metadata.json  requirements.txt
lab2/mlruns/0/: meta.yaml
lab2/mlruns/402125317896069493/: meta.yaml
lab2/mlruns/402125317896069493/13fc287746d942e48156dbd699da9b30/: meta.yaml
lab2/mlruns/402125317896069493/13fc287746d942e48156dbd699da9b30/metrics/: test_mae  test_r2  test_rmse  train_mae  train_r2  train_rmse
lab2/mlruns/402125317896069493/571a4ae7da794d2a9570fdccdca47235/: meta.yaml
lab2/mlruns/402125317896069493/571a4ae7da794d2a9570fdccdca47235/metrics/: test_mae  test_r2  test_rmse  train_mae  train_r2  train_rmse
lab2/mlruns/402125317896069493/9000a2b1e1aa4c5593e4b08b21ea9adc/: meta.yaml
lab2/mlruns/402125317896069493/9000a2b1e1aa4c5593e4b08b21ea9adc/metrics/: test_mae  test_r2  test_rmse  train_mae  train_r2  train_rmse
lab2/mlruns/402125317896069493/e5b2263029a14403b84be4aec5030902/: meta.yaml
lab2/mlruns/402125317896069493/e5b2263029a14403b84be4aec5030902/metrics/: test_mae  test_r2  (+4 more)
lab3/: IMPLEMENTATION_SUMMARY.md  PROJECT_STRUCTURE.txt  README.md  VISUALIZATION_GUIDE.md  VISUALIZATION_STRUCTURE.txt  aggregation.py  config.py  data_loader.py  emissions.py  example_usage.py  main.py  plant_operations.py  projection.py  requirements.txt  utilization.py  visualization.py
lab5/: Lab 5.ipynb
lab5/data/databases/: sp500_infoboxes.csv
lab6/: README.md  app.py
lab6/data/: labeled_esg_data.csv
(+41 files in other folders)
